--- a/Used_Car_Prediction.ipynb
+++ b/Used_Car_Prediction.ipynb
@@ -97,17 +97,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-06-07 16:02:17.425281: I external/local_tsl/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-06-07 16:02:18.382461: I external/local_tsl/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-06-07 16:02:20.567502: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-06-07 16:02:23.723659: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -120,7 +109,7 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder, LabelEncoder\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -998,6 +987,35 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "id": "6d181af6-524c-40b6-80b2-a8c5944cdf43",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "fuel_type\n",
+       "Gasoline          49439\n",
+       "Hybrid             1766\n",
+       "E85 Flex Fuel      1479\n",
+       "Diesel             1109\n",
+       "–                   294\n",
+       "Plug-In Hybrid      182\n",
+       "not supported         4\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train[\"fuel_type\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "a389c403-3820-4f09-b154-f21eb13bacec",
    "metadata": {},
    "outputs": [
@@ -1034,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 56,
    "id": "534741a5-1dc9-42b6-8d12-3023708647a9",
    "metadata": {},
    "outputs": [
@@ -1067,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 57,
    "id": "748bb8a7-4c41-4ba3-8edf-676934563458",
    "metadata": {},
    "outputs": [
@@ -1090,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 58,
    "id": "dd437477-de82-46e8-aeb5-051851f7e0d5",
    "metadata": {},
    "outputs": [
@@ -1146,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 59,
    "id": "a6eba872-cd0e-4b98-8220-fa6fc1ebc259",
    "metadata": {},
    "outputs": [
@@ -1177,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 60,
    "id": "d571df7d-8331-4820-9a70-7ecf45a709b9",
    "metadata": {},
    "outputs": [
@@ -1198,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 61,
    "id": "d5f9c0eb-3b89-4c2d-b872-7e416babc2e7",
    "metadata": {},
    "outputs": [
@@ -1227,145 +1245,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 62,
    "id": "0ff20ce3-dc92-43d8-8cc6-c561716b048a",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>brand</th>\n",
-       "      <th>model</th>\n",
-       "      <th>model_year</th>\n",
-       "      <th>milage</th>\n",
-       "      <th>fuel_type</th>\n",
-       "      <th>engine</th>\n",
-       "      <th>transmission</th>\n",
-       "      <th>ext_col</th>\n",
-       "      <th>int_col</th>\n",
-       "      <th>accident</th>\n",
-       "      <th>clean_title</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Ford</td>\n",
-       "      <td>F-150 Lariat</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>74349</td>\n",
-       "      <td>Gasoline</td>\n",
-       "      <td>375.0HP 3.5L V6 Cylinder Engine Gasoline Fuel</td>\n",
-       "      <td>10-Speed A/T</td>\n",
-       "      <td>Blue</td>\n",
-       "      <td>Gray</td>\n",
-       "      <td>None reported</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>BMW</td>\n",
-       "      <td>335 i</td>\n",
-       "      <td>2007</td>\n",
-       "      <td>80000</td>\n",
-       "      <td>Gasoline</td>\n",
-       "      <td>300.0HP 3.0L Straight 6 Cylinder Engine Gasoli...</td>\n",
-       "      <td>6-Speed M/T</td>\n",
-       "      <td>Black</td>\n",
-       "      <td>Black</td>\n",
-       "      <td>None reported</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Jaguar</td>\n",
-       "      <td>XF Luxury</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>91491</td>\n",
-       "      <td>Gasoline</td>\n",
-       "      <td>300.0HP 4.2L 8 Cylinder Engine Gasoline Fuel</td>\n",
-       "      <td>6-Speed A/T</td>\n",
-       "      <td>Purple</td>\n",
-       "      <td>Beige</td>\n",
-       "      <td>None reported</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>BMW</td>\n",
-       "      <td>X7 xDrive40i</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>2437</td>\n",
-       "      <td>Hybrid</td>\n",
-       "      <td>335.0HP 3.0L Straight 6 Cylinder Engine Gasoli...</td>\n",
-       "      <td>Transmission w/Dual Shift Mode</td>\n",
-       "      <td>Gray</td>\n",
-       "      <td>Brown</td>\n",
-       "      <td>None reported</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Pontiac</td>\n",
-       "      <td>Firebird Base</td>\n",
-       "      <td>2001</td>\n",
-       "      <td>111000</td>\n",
-       "      <td>Gasoline</td>\n",
-       "      <td>200.0HP 3.8L V6 Cylinder Engine Gasoline Fuel</td>\n",
-       "      <td>A/T</td>\n",
-       "      <td>White</td>\n",
-       "      <td>Black</td>\n",
-       "      <td>None reported</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     brand          model  model_year  milage fuel_type  \\\n",
-       "0     Ford   F-150 Lariat        2018   74349  Gasoline   \n",
-       "1      BMW          335 i        2007   80000  Gasoline   \n",
-       "2   Jaguar      XF Luxury        2009   91491  Gasoline   \n",
-       "3      BMW   X7 xDrive40i        2022    2437    Hybrid   \n",
-       "4  Pontiac  Firebird Base        2001  111000  Gasoline   \n",
-       "\n",
-       "                                              engine  \\\n",
-       "0      375.0HP 3.5L V6 Cylinder Engine Gasoline Fuel   \n",
-       "1  300.0HP 3.0L Straight 6 Cylinder Engine Gasoli...   \n",
-       "2       300.0HP 4.2L 8 Cylinder Engine Gasoline Fuel   \n",
-       "3  335.0HP 3.0L Straight 6 Cylinder Engine Gasoli...   \n",
-       "4      200.0HP 3.8L V6 Cylinder Engine Gasoline Fuel   \n",
-       "\n",
-       "                     transmission ext_col int_col       accident clean_title  \n",
-       "0                    10-Speed A/T    Blue    Gray  None reported         Yes  \n",
-       "1                     6-Speed M/T   Black   Black  None reported         Yes  \n",
-       "2                     6-Speed A/T  Purple   Beige  None reported         Yes  \n",
-       "3  Transmission w/Dual Shift Mode    Gray   Brown  None reported         Yes  \n",
-       "4                             A/T   White   Black  None reported         Yes  "
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "unmatched ')' (855103136.py, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[62], line 6\u001b[0;36m\u001b[0m\n\u001b[0;31m    data = pd.concat[df_train, df_test], axis = 1)\u001b[0m\n\u001b[0m                                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unmatched ')'\n"
+     ]
     }
    ],
    "source": [
@@ -1373,14 +1263,16 @@
     "numeric_transformer = StandardScaler()\n",
     "categorical_transformer = OneHotEncoder()\n",
     "\n",
-    "#removing our target variable from the training dataset\n",
-    "df_new_train = df_train.drop([\"id\", \"price\"], axis = 1)\n",
-    "df_new_train.head()"
+    "#merging our test and train data for easy scaling and encoding\n",
+    "df_test['target'] = None  # or np.nan if you prefer\n",
+    "\n",
+    "# Concatenate the dataframes\n",
+    "df_combined = pd.concat([df_train, df_test], axis=0, ignore_index=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "0e0b740a-ca8d-4038-9cd9-512e7aad5b6c",
    "metadata": {},
    "outputs": [
@@ -1530,7 +1422,7 @@
        "4  At least 1 accident or damage reported         Yes  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1543,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "2f3713cb-477a-4463-963f-d59a93fd581f",
    "metadata": {},
    "outputs": [],
@@ -1555,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "b1408bc4-9420-400e-ad8f-25cf3ea67ed1",
    "metadata": {},
    "outputs": [],
@@ -1571,7 +1463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "2edabe7d-f4f8-4790-bab4-d48f9ae9c63e",
    "metadata": {},
    "outputs": [],
@@ -1582,7 +1474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "2a9f8dc2-6892-4fe9-8757-290574fdb8ea",
    "metadata": {},
    "outputs": [],
@@ -1594,39 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "61dc7477-6297-4547-a884-cd673cb5deac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#preparing our data\n",
-    "labelencoder = OneHotEncoder()\n",
-    "#for our train data\n",
-    "encoded_train = labelencoder.fit_transform(train_new_data[categorical])\n",
-    "\n",
-    "#for our test data\n",
-    "encoded_cattest = labelencoder.fit_transform(test_new_data[categorical])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6682a159-6596-4389-b3bd-7d33722a7e23",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b36e93ae-2f36-4cec-a847-402a4f523b41",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "0d1665f9-7881-4d2d-8d17-042599ecd263",
    "metadata": {},
    "outputs": [],
@@ -1642,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 34,
    "id": "261fefb3-3b26-40ab-9e4f-9d433777d5b8",
    "metadata": {},
    "outputs": [],
@@ -1652,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "07f245fb-1105-441b-b5a9-43830d1a8c86",
    "metadata": {},
    "outputs": [],
@@ -1662,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 36,
    "id": "5214b8b5-0b12-44f0-bc3f-2bb6ad7b8172",
    "metadata": {},
    "outputs": [
@@ -1673,7 +1533,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[39], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Convert the encoded data to a DataFrame for train data\u001b[39;00m\n\u001b[1;32m      2\u001b[0m encoded_cat_data_array \u001b[38;5;241m=\u001b[39m encoded_cat_train\u001b[38;5;241m.\u001b[39mtoarray()\n\u001b[0;32m----> 3\u001b[0m encoded_cat_data_df \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mDataFrame\u001b[49m\u001b[43m(\u001b[49m\u001b[43mencoded_cat_data_array\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mfeature_names\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m#concat train data together\u001b[39;00m\n\u001b[1;32m      6\u001b[0m new_train \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mconcat([encoded_cat_data_df, train_new_data\u001b[38;5;241m.\u001b[39mselect_dtypes(exclude \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mobject\u001b[39m\u001b[38;5;124m\"\u001b[39m)], axis \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[36], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Convert the encoded data to a DataFrame for train data\u001b[39;00m\n\u001b[1;32m      2\u001b[0m encoded_cat_data_array \u001b[38;5;241m=\u001b[39m encoded_cat_train\u001b[38;5;241m.\u001b[39mtoarray()\n\u001b[0;32m----> 3\u001b[0m encoded_cat_data_df \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mDataFrame\u001b[49m\u001b[43m(\u001b[49m\u001b[43mencoded_cat_data_array\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mfeature_names\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m#concat train data together\u001b[39;00m\n\u001b[1;32m      6\u001b[0m new_train \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mconcat([encoded_cat_data_df, train_new_data\u001b[38;5;241m.\u001b[39mselect_dtypes(exclude \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mobject\u001b[39m\u001b[38;5;124m\"\u001b[39m)], axis \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m)\n",
       "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/frame.py:827\u001b[0m, in \u001b[0;36mDataFrame.__init__\u001b[0;34m(self, data, index, columns, dtype, copy)\u001b[0m\n\u001b[1;32m    816\u001b[0m         mgr \u001b[38;5;241m=\u001b[39m dict_to_mgr(\n\u001b[1;32m    817\u001b[0m             \u001b[38;5;66;03m# error: Item \"ndarray\" of \"Union[ndarray, Series, Index]\" has no\u001b[39;00m\n\u001b[1;32m    818\u001b[0m             \u001b[38;5;66;03m# attribute \"name\"\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    824\u001b[0m             copy\u001b[38;5;241m=\u001b[39m_copy,\n\u001b[1;32m    825\u001b[0m         )\n\u001b[1;32m    826\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 827\u001b[0m         mgr \u001b[38;5;241m=\u001b[39m \u001b[43mndarray_to_mgr\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    828\u001b[0m \u001b[43m            \u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    829\u001b[0m \u001b[43m            \u001b[49m\u001b[43mindex\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    830\u001b[0m \u001b[43m            \u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    831\u001b[0m \u001b[43m            \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    832\u001b[0m \u001b[43m            \u001b[49m\u001b[43mcopy\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcopy\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    833\u001b[0m \u001b[43m            \u001b[49m\u001b[43mtyp\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmanager\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    834\u001b[0m \u001b[43m        \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    836\u001b[0m \u001b[38;5;66;03m# For data is list-like, or Iterable (will consume into list)\u001b[39;00m\n\u001b[1;32m    837\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m is_list_like(data):\n",
       "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/internals/construction.py:336\u001b[0m, in \u001b[0;36mndarray_to_mgr\u001b[0;34m(values, index, columns, dtype, copy, typ)\u001b[0m\n\u001b[1;32m    331\u001b[0m \u001b[38;5;66;03m# _prep_ndarraylike ensures that values.ndim == 2 at this point\u001b[39;00m\n\u001b[1;32m    332\u001b[0m index, columns \u001b[38;5;241m=\u001b[39m _get_axes(\n\u001b[1;32m    333\u001b[0m     values\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m], values\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m], index\u001b[38;5;241m=\u001b[39mindex, columns\u001b[38;5;241m=\u001b[39mcolumns\n\u001b[1;32m    334\u001b[0m )\n\u001b[0;32m--> 336\u001b[0m \u001b[43m_check_values_indices_shape_match\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvalues\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindex\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    338\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m typ \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124marray\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m    339\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28missubclass\u001b[39m(values\u001b[38;5;241m.\u001b[39mdtype\u001b[38;5;241m.\u001b[39mtype, \u001b[38;5;28mstr\u001b[39m):\n",
       "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/internals/construction.py:420\u001b[0m, in \u001b[0;36m_check_values_indices_shape_match\u001b[0;34m(values, index, columns)\u001b[0m\n\u001b[1;32m    418\u001b[0m passed \u001b[38;5;241m=\u001b[39m values\u001b[38;5;241m.\u001b[39mshape\n\u001b[1;32m    419\u001b[0m implied \u001b[38;5;241m=\u001b[39m (\u001b[38;5;28mlen\u001b[39m(index), \u001b[38;5;28mlen\u001b[39m(columns))\n\u001b[0;32m--> 420\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mShape of passed values is \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpassed\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, indices imply \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mimplied\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
