--- a/Used_Car_Prediction.ipynb
+++ b/Used_Car_Prediction.ipynb
@@ -1052,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 21,
    "id": "534741a5-1dc9-42b6-8d12-3023708647a9",
    "metadata": {},
    "outputs": [
@@ -1085,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 22,
    "id": "748bb8a7-4c41-4ba3-8edf-676934563458",
    "metadata": {},
    "outputs": [
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 23,
    "id": "dd437477-de82-46e8-aeb5-051851f7e0d5",
    "metadata": {},
    "outputs": [
@@ -1164,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 24,
    "id": "a6eba872-cd0e-4b98-8220-fa6fc1ebc259",
    "metadata": {},
    "outputs": [
@@ -1195,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 25,
    "id": "d571df7d-8331-4820-9a70-7ecf45a709b9",
    "metadata": {},
    "outputs": [
@@ -1216,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 26,
    "id": "d5f9c0eb-3b89-4c2d-b872-7e416babc2e7",
    "metadata": {},
    "outputs": [
@@ -1245,35 +1245,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 27,
    "id": "0ff20ce3-dc92-43d8-8cc6-c561716b048a",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unmatched ')' (855103136.py, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[62], line 6\u001b[0;36m\u001b[0m\n\u001b[0;31m    data = pd.concat[df_train, df_test], axis = 1)\u001b[0m\n\u001b[0m                                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unmatched ')'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define the transformers\n",
     "numeric_transformer = StandardScaler()\n",
-    "categorical_transformer = OneHotEncoder()\n",
-    "\n",
-    "#merging our test and train data for easy scaling and encoding\n",
-    "df_test['target'] = None  # or np.nan if you prefer\n",
-    "\n",
-    "# Concatenate the dataframes\n",
-    "df_combined = pd.concat([df_train, df_test], axis=0, ignore_index=True)\n"
+    "categorical_transformer = OneHotEncoder()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "0e0b740a-ca8d-4038-9cd9-512e7aad5b6c",
+   "id": "9298200b-c65a-47ad-afec-21c00918a47d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#merging our test and train data for easy scaling and encoding\n",
+    "df_test['price'] = None  # or np.nan if you prefer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "24755073-6caf-4d1b-82cd-640d27008009",
    "metadata": {},
    "outputs": [
     {
@@ -1297,6 +1293,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>id</th>\n",
        "      <th>brand</th>\n",
        "      <th>model</th>\n",
        "      <th>model_year</th>\n",
@@ -1308,11 +1305,13 @@
        "      <th>int_col</th>\n",
        "      <th>accident</th>\n",
        "      <th>clean_title</th>\n",
+       "      <th>price</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>54273</td>\n",
        "      <td>Mercedes-Benz</td>\n",
        "      <td>E-Class E 350</td>\n",
        "      <td>2014</td>\n",
@@ -1324,9 +1323,11 @@
        "      <td>Beige</td>\n",
        "      <td>None reported</td>\n",
        "      <td>Yes</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>54274</td>\n",
        "      <td>Lexus</td>\n",
        "      <td>RX 350 Base</td>\n",
        "      <td>2015</td>\n",
@@ -1338,9 +1339,11 @@
        "      <td>Black</td>\n",
        "      <td>None reported</td>\n",
        "      <td>Yes</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>54275</td>\n",
        "      <td>Mercedes-Benz</td>\n",
        "      <td>C-Class C 300</td>\n",
        "      <td>2015</td>\n",
@@ -1352,9 +1355,11 @@
        "      <td>White</td>\n",
        "      <td>None reported</td>\n",
        "      <td>Yes</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>54276</td>\n",
        "      <td>Land</td>\n",
        "      <td>Rover Range Rover 5.0L Supercharged Autobiogra...</td>\n",
        "      <td>2018</td>\n",
@@ -1366,9 +1371,11 @@
        "      <td>White</td>\n",
        "      <td>At least 1 accident or damage reported</td>\n",
        "      <td>Yes</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>54277</td>\n",
        "      <td>BMW</td>\n",
        "      <td>X6 xDrive40i</td>\n",
        "      <td>2020</td>\n",
@@ -1380,18 +1387,19 @@
        "      <td>Black</td>\n",
        "      <td>At least 1 accident or damage reported</td>\n",
        "      <td>Yes</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           brand                                              model  \\\n",
-       "0  Mercedes-Benz                                      E-Class E 350   \n",
-       "1          Lexus                                        RX 350 Base   \n",
-       "2  Mercedes-Benz                                      C-Class C 300   \n",
-       "3           Land  Rover Range Rover 5.0L Supercharged Autobiogra...   \n",
-       "4            BMW                                       X6 xDrive40i   \n",
+       "      id          brand                                              model  \\\n",
+       "0  54273  Mercedes-Benz                                      E-Class E 350   \n",
+       "1  54274          Lexus                                        RX 350 Base   \n",
+       "2  54275  Mercedes-Benz                                      C-Class C 300   \n",
+       "3  54276           Land  Rover Range Rover 5.0L Supercharged Autobiogra...   \n",
+       "4  54277            BMW                                       X6 xDrive40i   \n",
        "\n",
        "   model_year  milage fuel_type  \\\n",
        "0        2014   73000  Gasoline   \n",
@@ -1414,74 +1422,307 @@
        "3  Transmission w/Dual Shift Mode   White   White   \n",
        "4                     8-Speed A/T   White   Black   \n",
        "\n",
-       "                                 accident clean_title  \n",
-       "0                           None reported         Yes  \n",
-       "1                           None reported         Yes  \n",
-       "2                           None reported         Yes  \n",
-       "3  At least 1 accident or damage reported         Yes  \n",
-       "4  At least 1 accident or damage reported         Yes  "
+       "                                 accident clean_title price  \n",
+       "0                           None reported         Yes  None  \n",
+       "1                           None reported         Yes  None  \n",
+       "2                           None reported         Yes  None  \n",
+       "3  At least 1 accident or damage reported         Yes  None  \n",
+       "4  At least 1 accident or damage reported         Yes  None  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#removing our target variable from the testing dataset\n",
-    "df_new_test = df_test.drop(\"id\", axis = 1)\n",
-    "df_new_test.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "2f3713cb-477a-4463-963f-d59a93fd581f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#getting our numeric and categorical features\n",
-    "numeric = df_new_train.select_dtypes(include = \"number\").columns.tolist()\n",
-    "categorical = df_new_train.select_dtypes(include = \"object\").columns.tolist()"
+    "df_test.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "b1408bc4-9420-400e-ad8f-25cf3ea67ed1",
+   "id": "cd23ec9c-5c85-4e8d-bab9-1b30f683b97f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>brand</th>\n",
+       "      <th>model</th>\n",
+       "      <th>model_year</th>\n",
+       "      <th>milage</th>\n",
+       "      <th>fuel_type</th>\n",
+       "      <th>engine</th>\n",
+       "      <th>transmission</th>\n",
+       "      <th>ext_col</th>\n",
+       "      <th>int_col</th>\n",
+       "      <th>accident</th>\n",
+       "      <th>clean_title</th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Ford</td>\n",
+       "      <td>F-150 Lariat</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>74349</td>\n",
+       "      <td>Gasoline</td>\n",
+       "      <td>375.0HP 3.5L V6 Cylinder Engine Gasoline Fuel</td>\n",
+       "      <td>10-Speed A/T</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>Gray</td>\n",
+       "      <td>None reported</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>11000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>BMW</td>\n",
+       "      <td>335 i</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>80000</td>\n",
+       "      <td>Gasoline</td>\n",
+       "      <td>300.0HP 3.0L Straight 6 Cylinder Engine Gasoli...</td>\n",
+       "      <td>6-Speed M/T</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>None reported</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>8250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Jaguar</td>\n",
+       "      <td>XF Luxury</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>91491</td>\n",
+       "      <td>Gasoline</td>\n",
+       "      <td>300.0HP 4.2L 8 Cylinder Engine Gasoline Fuel</td>\n",
+       "      <td>6-Speed A/T</td>\n",
+       "      <td>Purple</td>\n",
+       "      <td>Beige</td>\n",
+       "      <td>None reported</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>15000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>BMW</td>\n",
+       "      <td>X7 xDrive40i</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>2437</td>\n",
+       "      <td>Hybrid</td>\n",
+       "      <td>335.0HP 3.0L Straight 6 Cylinder Engine Gasoli...</td>\n",
+       "      <td>Transmission w/Dual Shift Mode</td>\n",
+       "      <td>Gray</td>\n",
+       "      <td>Brown</td>\n",
+       "      <td>None reported</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>63500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Pontiac</td>\n",
+       "      <td>Firebird Base</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>111000</td>\n",
+       "      <td>Gasoline</td>\n",
+       "      <td>200.0HP 3.8L V6 Cylinder Engine Gasoline Fuel</td>\n",
+       "      <td>A/T</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>None reported</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>7850</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id    brand          model  model_year  milage fuel_type  \\\n",
+       "0   0     Ford   F-150 Lariat        2018   74349  Gasoline   \n",
+       "1   1      BMW          335 i        2007   80000  Gasoline   \n",
+       "2   2   Jaguar      XF Luxury        2009   91491  Gasoline   \n",
+       "3   3      BMW   X7 xDrive40i        2022    2437    Hybrid   \n",
+       "4   4  Pontiac  Firebird Base        2001  111000  Gasoline   \n",
+       "\n",
+       "                                              engine  \\\n",
+       "0      375.0HP 3.5L V6 Cylinder Engine Gasoline Fuel   \n",
+       "1  300.0HP 3.0L Straight 6 Cylinder Engine Gasoli...   \n",
+       "2       300.0HP 4.2L 8 Cylinder Engine Gasoline Fuel   \n",
+       "3  335.0HP 3.0L Straight 6 Cylinder Engine Gasoli...   \n",
+       "4      200.0HP 3.8L V6 Cylinder Engine Gasoline Fuel   \n",
+       "\n",
+       "                     transmission ext_col int_col       accident clean_title  \\\n",
+       "0                    10-Speed A/T    Blue    Gray  None reported         Yes   \n",
+       "1                     6-Speed M/T   Black   Black  None reported         Yes   \n",
+       "2                     6-Speed A/T  Purple   Beige  None reported         Yes   \n",
+       "3  Transmission w/Dual Shift Mode    Gray   Brown  None reported         Yes   \n",
+       "4                             A/T   White   Black  None reported         Yes   \n",
+       "\n",
+       "   price  \n",
+       "0  11000  \n",
+       "1   8250  \n",
+       "2  15000  \n",
+       "3  63500  \n",
+       "4   7850  "
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Concatenate the dataframes\n",
+    "df_combined = pd.concat([df_train, df_test], axis=0, ignore_index=True)\n",
+    "df_combined.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "823e1978-a92c-4499-8756-9067dc1ce10e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(90456, 13)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_combined.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "2f3713cb-477a-4463-963f-d59a93fd581f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#getting our numeric and categorical features\n",
+    "numeric = df_combined.drop([\"id\"], axis = 1).select_dtypes(include = \"number\").columns.tolist()\n",
+    "categorical = df_combined.drop([\"price\"],axis = 1).select_dtypes(include = \"object\").columns.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "3247a725-1810-4c39-a2e9-e6a58ea73fdc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['model_year', 'milage']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numeric"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "b3addbcb-5e1f-40dd-bdd5-225a43e44836",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['brand',\n",
+       " 'model',\n",
+       " 'fuel_type',\n",
+       " 'engine',\n",
+       " 'transmission',\n",
+       " 'ext_col',\n",
+       " 'int_col',\n",
+       " 'accident',\n",
+       " 'clean_title']"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "categorical"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7f2aa5a-abd7-4950-8501-96cc0c995da8",
    "metadata": {},
    "outputs": [],
    "source": [
     "scaler = StandardScaler()\n",
     "\n",
     "#standardizing for our numeric training data\n",
-    "scaled_train = scaler.fit_transform(df_new_train[numeric])\n",
-    "\n",
-    "#standardizing for our numeric test data\n",
-    "scaled_test = scaler.fit_transform(df_new_test[numeric])"
+    "scaled = scaler.fit_transform(df_combined[numeric])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "2edabe7d-f4f8-4790-bab4-d48f9ae9c63e",
+   "execution_count": null,
+   "id": "965b6464-1b78-4f3f-9897-67e0d1baa87a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_new_train_scaled = pd.DataFrame(scaled_train, columns=numeric)\n",
-    "df_new_test_scaled = pd.DataFrame(scaled_test, columns=numeric)"
+    "df_scaled = pd.DataFrame(scaled, columns=numeric)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "2a9f8dc2-6892-4fe9-8757-290574fdb8ea",
+   "execution_count": null,
+   "id": "d6025724-5beb-4cc6-bd03-28dbababa8bf",
    "metadata": {},
    "outputs": [],
    "source": [
     "#combining the scaled features with my original dataframe and dropping the previous ones\n",
-    "train_new_data = pd.concat([df_new_train_scaled ,df_new_train.select_dtypes(exclude=['float64', 'int64'])], axis = 1)\n",
-    "test_new_data = pd.concat([df_new_test_scaled ,df_new_test.select_dtypes(exclude=['float64', 'int64'])], axis = 1)"
+    "df_combined = df.drop(columns=numerical)\n",
+    "new_data = pd.concat([df_scaled ,df_combined], axis = 1)"
    ]
   },
   {
@@ -1494,10 +1735,7 @@
     "#preparing our data\n",
     "encoder = OneHotEncoder()\n",
     "#for our train data\n",
-    "encoded_cat_train = encoder.fit_transform(train_new_data[categorical])\n",
-    "\n",
-    "#for our test data\n",
-    "encoded_cat_test = encoder.fit_transform(test_new_data[categorical])"
+    "encoded = encoder.fit_transform(df_combined[categorical])"
    ]
   },
   {
@@ -1507,17 +1745,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "feature_names = encoder.get_feature_names_out(categorical)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "07f245fb-1105-441b-b5a9-43830d1a8c86",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "encoded_cat_data_array = encoded_cat_train.toarray()"
+    "feature_names = encoder.get_feature_names_out(categorical) #getting the feature names"
    ]
   },
   {
@@ -1542,13 +1770,13 @@
     }
    ],
    "source": [
-    "# Convert the encoded data to a DataFrame for train data\n",
-    "encoded_cat_data_array = encoded_cat_train.toarray()\n",
+    "# Convert the encoded data to a DataFrame \n",
+    "encoded_cat_data_array = encoded.toarray()\n",
     "encoded_cat_data_df = pd.DataFrame(encoded_cat_data_array, columns=feature_names)\n",
     "\n",
-    "#concat train data together\n",
-    "new_train = pd.concat([encoded_cat_data_df, train_new_data.select_dtypes(exclude = \"object\")], axis = 1)\n",
-    "new_train.head()"
+    "#combining the encoded features with my original dataframe and dropping the previous ones\n",
+    "df_combined = df.drop(columns=numerical)\n",
+    "new_data = pd.concat([df_scaled ,df_combined], axis = 1)"
    ]
   },
   {
